--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
             margin: 20px;
             border-radius: 5px;
         }
+        .start {
+            width: 100px;
+            height: 50px;
+            border: none;
+            font-size: 20px;
+            background: rgb(49, 196, 164);
+            color: rgb(143, 143, 143);
+            margin: 20px;
+            border-radius: 5px;
+        }
         </style>
 
     <div class="big__box">
@@ -84,6 +94,7 @@
         <div class="box"></div>
     </div>
     <div class="btn">
+        <button class="start">Start</button>
         <button class="center">Center</button>
         <button class="between">Between</button>
         <button class="around">Around</button>
